; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_wait_signal_trap_internal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_wait_signal_trap_internal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8
@SEMAPHORE_OPTION_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @semaphore_wait_signal_trap_internal(i32 %0, i32 %1, void (i64)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca void (i64)*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store void (i64)* %2, void (i64)** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @port_name_to_semaphore(i32 %10, i32* %8)
  store i64 %11, i64* %9, align 8
  %12 = load i64, i64* %9, align 8
  %13 = load i64, i64* @KERN_SUCCESS, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %32

15:                                               ; preds = %3
  %16 = load i32, i32* %4, align 4
  %17 = call i64 @port_name_to_semaphore(i32 %16, i32* %7)
  store i64 %17, i64* %9, align 8
  %18 = load i64, i64* %9, align 8
  %19 = load i64, i64* @KERN_SUCCESS, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %15
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* @SEMAPHORE_OPTION_NONE, align 4
  %25 = load void (i64)*, void (i64)** %6, align 8
  %26 = call i64 @semaphore_wait_internal(i32 %22, i32 %23, i64 0, i32 %24, void (i64)* %25)
  store i64 %26, i64* %9, align 8
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @semaphore_dereference(i32 %27)
  br label %29

29:                                               ; preds = %21, %15
  %30 = load i32, i32* %8, align 4
  %31 = call i32 @semaphore_dereference(i32 %30)
  br label %32

32:                                               ; preds = %29, %3
  %33 = load i64, i64* %9, align 8
  ret i64 %33
}

declare dso_local i64 @port_name_to_semaphore(i32, i32*) #1

declare dso_local i64 @semaphore_wait_internal(i32, i32, i64, i32, void (i64)*) #1

declare dso_local i32 @semaphore_dereference(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
